[package]
name = "solana_sniper_bot"
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tokio = { version = "1.37", features = ["full"] }
solana-client = "~1.18.0"
solana-sdk = "~1.18.0"
solana-program = "~1.18.0"
solana-account-decoder = "~1.18.0"
solana-transaction-status = "~1.18.0"
spl-token = "~3.5.0"
spl-associated-token-account = "~2.3.0"
futures-util = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
bs58 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
bincode = "1.3"
async-channel = "2.0"
borsh = "0.10"
dashmap = "5.5"
tokio-retry = "0.3"
dotenvy = "0.15"

